--- a/app/index.html
+++ b/app/index.html
@@ -14,8 +14,8 @@
 
   <div id="hi" class="planetcontainer">
     <div id="planeta" class="planetbox">
-      PLANET A
-      <select name="planeta" onchange="planetaChange()">
+      PLANET
+      <select name="planeta" onchange="planetaChange(value)">
         <option value="earth">earth</option>
         <option value="jupiter">jupiter</option>
         <option value="pluto">pluto</option>
@@ -25,15 +25,6 @@
       </div>
     </div>
 
-    <div id="planetb" class="planetbox">
-      PLANET X
-      <select name="planetb">
-        <option value="earth">earth</option>
-        <option value="jupiter">jupiter</option>
-        <option value="pluto">pluto</option>
-      </select>
-      <br />
-    </div>
     
   </div>
 
