--- a/app/index.html
+++ b/app/index.html
@@ -5,12 +5,14 @@
   <meta http-equiv="Content-Style-Type" content="text/css">
   <title>Access U 2019</title>
   <link rel="stylesheet" type="text/css" href="appstyle.css" />
+  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.2/howler.min.js"></script>
   <script src="appscript.js"></script>
 </head>
 <body onload="initGame()">
   
   <h1> Droppin' Mics on Planets</h1>
-  <p class="p1">hello</p>
+  <p class="p1">let's compare objects falling with gravity on three different planets.</p>
 
   <div id="hi" class="planetcontainer">
     <div id="planeta" class="planetbox">
