added reset btn

--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,8 @@
 
   <div class="controlsarea">
       <button onclick="dropthemic()">DROP THE MIC!</button>
+
+      <button onclick="resetGame()">Reset</button>
     </div>
 
 </body>
