--- a/app_workshop/index.html
+++ b/app_workshop/index.html
@@ -4,10 +4,19 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta http-equiv="Content-Style-Type" content="text/css">
   <title>Access U 2019</title>
+  <link rel="stylesheet" type="text/css" href="appstyle.css" />
+  <script src="howler.min.js"></script>
+  <script src="appscript.js"></script>
 </head>
-<body>
-  
+<body onload="initSim()">
+  Welcome to Access U 2019!
 
+
+  <div id="canvascontainer" class="canvasarea">
+    
+  </div>
+
+  <button onclick="startSim()">start</button>
 
 </body>
 </html>
